--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "customer"
+    }
+  },
+  "defaultProject": "customer",
+  "cli": {
+    "analytics": false
+  }
 }
